--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/44232063_100306854302070_8458525806971322368_n.jpg") top right no-repeat;
+  background: url("../img/12314043  JEC23EC043  VAISHNAV C.JPG") top right no-repeat;
   background-size: cover;
   position: relative;
 }
